; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_sge.c_discard_tx.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/cxgbe/extr_t4_sge.c_discard_tx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sge_eq = type { i32 }

@EQ_ENABLED = common dso_local global i32 0, align 4
@EQ_QFLUSH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sge_eq*)* @discard_tx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @discard_tx(%struct.sge_eq* %0) #0 {
  %2 = alloca %struct.sge_eq*, align 8
  store %struct.sge_eq* %0, %struct.sge_eq** %2, align 8
  %3 = load %struct.sge_eq*, %struct.sge_eq** %2, align 8
  %4 = getelementptr inbounds %struct.sge_eq, %struct.sge_eq* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @EQ_ENABLED, align 4
  %7 = load i32, i32* @EQ_QFLUSH, align 4
  %8 = or i32 %6, %7
  %9 = and i32 %5, %8
  %10 = load i32, i32* @EQ_ENABLED, align 4
  %11 = icmp ne i32 %9, %10
  %12 = zext i1 %11 to i32
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
